Graph ensemble data

--- a/uq_benchmark_2019/analyze.ipynb
+++ b/uq_benchmark_2019/analyze.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -98,7 +98,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_ensemble_stats(ensemble_dir, stat_name, ensemble_size):\n",
+    "    probs = None\n",
+    "    for i in range(ensemble_size):\n",
+    "        stats = load_npz(os.path.join(ensemble_dir, str(i), stat_name))\n",
+    "        if probs is None:\n",
+    "            probs = stats['probs']\n",
+    "        else:\n",
+    "            probs += stats['probs']\n",
+    "        print(sum(probs[0]))\n",
+    "    probs /= ensemble_size\n",
+    "    return {'probs': probs, 'labels': stats['labels']}\n",
+    "    \n",
+    "stats = generate_ensemble_stats('mnist/results/ensemble', 'stats_small_0.npz', 15)\n",
+    "write_npz('mnist/results/ensemble/', 'stats_small_28.npz', stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -107,7 +129,7 @@
    "outputs": [],
    "source": [
     "ood_name = 'stats_small_28.npz'\n",
-    "methods = ['vanilla', 'svi', 'dropout', 'll_svi', 'll_dropout']\n",
+    "methods = ['vanilla', 'svi', 'dropout', 'll_svi', 'll_dropout', 'ensemble']\n",
     "counts = {}\n",
     "for method in methods:\n",
     "    path = os.path.join('mnist/results/',method, ood_name)\n",
@@ -128,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -172,10 +194,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
