Bald for dropout methods

--- a/uq_benchmark_2019/analyze.ipynb
+++ b/uq_benchmark_2019/analyze.ipynb
@@ -27,7 +27,10 @@
     "from array_utils import load_npz, write_npz\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import os"
+    "import os\n",
+    "import scipy\n",
+    "\n",
+    "softmax = scipy.special.softmax"
    ]
   },
   {
@@ -121,6 +124,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# implement BALD approach for dropout confidence\n",
+    "def bald_confidence(stats):   \n",
+    "    probs = stats['probs']\n",
+    "    probs_entropy = - np.sum(probs * np.log(probs + 1e-10), axis=-1)\n",
+    "    \n",
+    "    samples = softmax(stats['logits_samples'], axis=-1)\n",
+    "    samples_entropy = - np.mean(np.sum(samples * np.log(samples + 1e-10), axis=-1), axis=1)\n",
+    "    \n",
+    "    confidence = -probs_entropy + samples_entropy + 1\n",
+    "    confidence[confidence < 0] = 0\n",
+    "    \n",
+    "    print(confidence[:10])\n",
+    "    print(np.max(confidence))\n",
+    "    print(np.min(confidence))\n",
+    "    return confidence\n",
+    "    \n",
+    "    \n",
+    "#     print(generated[0], stats['probs'][0])\n",
+    "    \n",
+    "                                   \n",
+    "    \n",
+    "cf = bald_confidence(load_npz('mnist/results/dropout/stats_28.npz'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_confidences(confidences, thresholds):\n",
+    "    shape = (len(thresholds),)\n",
+    "    counts = np.zeros(shape)\n",
+    "\n",
+    "#   eq = np.equal(predict_class, labels)\n",
+    "    for i, thresh in enumerate(thresholds):\n",
+    "        mask = confidences >= thresh\n",
+    "        counts[i] = mask.sum(-1)\n",
+    "    return counts\n",
+    "\n",
+    "compute_confidences(cf, thresholds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -130,11 +182,21 @@
    "source": [
     "ood_name = 'stats_small_28.npz'\n",
     "methods = ['vanilla', 'svi', 'dropout', 'll_svi', 'll_dropout', 'ensemble']\n",
+    "bald_methods = ['dropout', 'll_dropout']\n",
+    "\n",
     "counts = {}\n",
+    "\n",
     "for method in methods:\n",
     "    path = os.path.join('mnist/results/',method, ood_name)\n",
     "    stats = load_npz(path)\n",
     "    _, counts[method] = compute_accuracies_at_confidences(stats['labels'], stats['probs'], thresholds)\n",
+    "    \n",
+    "for method in bald_methods:\n",
+    "    path = os.path.join('mnist/results/',method, 'stats_28.npz')\n",
+    "    stats = load_npz(path)\n",
+    "    confidence = compute_confidences(bald_confidence(stats), thresholds)\n",
+    "    print('shape conf', confidence.shape)\n",
+    "    counts[method+'_bald'] = confidence\n",
     "\n",
     "plt.figure(figsize=(10, 10))\n",
     "for method, count in counts.items():\n",
